--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,27 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><%= t('activerecord.attributes.user.change_password') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
+  <%= render partial: 'partials/form_errors', locals: {model: @user} %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <div class="form-group">
+    <%= f.input :email, class: 'form-control', error_class: 'is-invalid', valid_class: 'is-valid' %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
+
+    <%= f.input :current_password, class: 'form-control', error_class: 'is-invalid', valid_class: 'is-valid' %>
+    <%= f.input :password, class: 'form-control', error_class: 'is-invalid', valid_class: 'is-valid' %>
+    <%= f.input :password_confirmation, class: 'form-control', error_class: 'is-invalid', valid_class: 'is-valid' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="form-actions">
+    <%= f.button :submit, t('activerecord.attributes.user.update'), class: "btn btn-large btn-primary", "data-disable-with" => "Submitting.." %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<p><%= t('activerecord.attributes.user.unhappy')%> </p>
+<%= button_to t('activerecord.attributes.user.cancel_account'), registration_path(resource_name), data: { confirm: t('simple_form.labels.defaults.confirm') }, method: :delete, class: "btn btn-large btn-danger", "data-disable-with" => "Submitting.." %></p>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= link_to t('simple_form.button.back'), :back %>
