--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,9 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <button type="button" class="btn btn-light">
+    <%= link_to t('activerecord.attributes.user.log_in'), new_session_path(resource_name) %><br />
+  </button>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <button type="button" class="btn btn-light">
+    <%= link_to t('activerecord.attributes.user.sign_up'), new_registration_path(resource_name) %>
+  </button>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
