--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,18 +5,10 @@
 <div class="text-center">
   <% if @user == current_user %>
     <%= link_to t('activerecord.attributes.user.edit_profile'), edit_user_path(@user), class: 'btn btn-primary buffer-right' %>
-    <%= link_to t('activerecord.attributes.user.delete_profile'), @user, method: :delete,
-              data: { confirm: t('simple_form.labels.defaults.confirm') }, class: "btn btn-danger" %>
+    <%= link_to t('activerecord.attributes.user.delete_profile'), @user,
+              data: { turbo_method: :delete, turbo_confirm: t('activerecord.attributes.user.delete_profile_confirm')},
+              class: "btn btn-danger" %>
   <% else %>
     <p><%= t('activerecord.attributes.user.current_user')%></p>
   <% end %>
 </div>
-
-<%# <% if @user.posts.any? %>
-  <%# <h3><%= t('activerecord.attributes.user.my_posts')</h3> %>
-  <%# <%= render partial: 'posts/post', collection: @user.posts %>
-<%# <% else %>
-  <%# <p class="buffer-top"> %>
-    <%# <%= t('activerecord.attributes.user.writen_posts')%> 
-  <%# </p> %>
-<%# <% end %> 
