--- a/app/views/doctors_appointments/_new_form.html.erb
+++ b/app/views/doctors_appointments/_new_form.html.erb
@@ -2,6 +2,14 @@
   <%= render partial: 'partials/form_errors', locals: {model: @appointment} %>
 
   <div class="form-group">
+    <%= f.input :doctor_profile,
+                label: t('view.user.type.doctor'),
+                as: :select,
+                collection: @doctor.present? ? @doctor.user.username.humanize.split : DoctorProfile.all.map { |doc| doc.user.username.humanize },
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: 'username' }%>
+
     <%= f.input :visit_time,
       as: :datetime,
       label: t('view.appointments.visit_time'),
@@ -11,7 +19,7 @@
       html5: true %>
   </div>
   <div class="actions">
-    <%= f.button :submit, t('activerecord.attributes.appointment.save'), class: 'btn btn-primary' %>
+    <%= f.button :submit, t('activerecord.attributes.appointment.save'), class: 'btn btn-success' %>
     <%= t('activerecord.attributes.appointment.or') %>
     <%= link_to t('activerecord.attributes.appointment.back'), :back, class: 'btn btn-primary' %>
   </div>
