--- a/app/views/doctors_appointments/show.html.erb
+++ b/app/views/doctors_appointments/show.html.erb
@@ -35,7 +35,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0"><%= t('view.appointment.visit_time')%></p>
+                <p class="mb-0"><%= t('view.appointments.visit_time')%></p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= date_format(@appointment.visit_time) %></p>
