--- a/app/views/doctor_profiles/show.html.erb
+++ b/app/views/doctor_profiles/show.html.erb
@@ -38,7 +38,7 @@
                           data: { turbo_method: :delete, turbo_confirm: t('activerecord.attributes.user.delete_profile_confirm')},
                           class: "btn btn-danger ms-1" %>
             <% else %>
-              <%= link_to t('controllers.appointments.create'), new_doctors_appointment_url, class: 'btn btn-primary' %>
+              <%= link_to t('controllers.appointments.create'), new_doctors_appointment_url(doctor_id: @doctor_profile.id), class: 'btn btn-primary' %>
             <% end %>
 
             </div>
