--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,15 @@
               </span>
                 </a>
               </li>
+
+              <li class="nav-item active">
+                <a>
+                  <%= link_to t('controllers.appointments.create'), new_doctors_appointment_url, class: 'btn btn-dark' %>
+                  <span class="sr-only">
+                (current)
+              </span>
+                </a>
+              </li>
               <% end %>
               <li class="nav-item active">
                 <a>
