--- a/app/views/patient_profiles/index.html.erb
+++ b/app/views/patient_profiles/index.html.erb
@@ -13,9 +13,14 @@
               <p class="mb-0 text-uppercase"><i class="fas fa-ellipsis-h ms-4 me-2"></i> <span
                   class="text-muted small"><%= patient.user.email %></span>
                 <span class="ms-3 me-4">|</span></p>
-              <a href="#!">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-2.webp" alt="avatar"
-                  class="img-fluid rounded-circle me-3" width="50">
+              <a>
+              <%# avatar %>
+              <% if patient.user.image.attached? %>
+                <%= image_tag patient.user.image, class: "img-fluid rounded-circle me-3", width: "50", alt: "avatar"  %>
+              <% else %>
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                class="img-fluid rounded-circle me-3" width="50">
+              <% end %>                
               </a>
             </div>
             <hr class="my-4">
@@ -23,9 +28,13 @@
             <% patient.doctor_profiles.each do |doctor| %>
               <p class="mb-0 text-uppercase"><i class="fas fa-cog me-2"></i> <span
                   class="text-muted small"></span></p>
-              <a href="#!">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-2.webp" alt="avatar"
-                  class="img-fluid rounded-circle me-3" width="35">
+              <a>
+              <% if doctor.user.image.attached? %>
+                <%= image_tag doctor.user.image, class: "img-fluid rounded-circle me-3", width: "35", alt: "avatar"  %>
+              <% else %>
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                class="img-fluid rounded-circle me-3" width="35">
+              <% end %>
               </a>
             <% end %>
             </div>
