--- a/app/views/patient_profiles/show.html.erb
+++ b/app/views/patient_profiles/show.html.erb
@@ -4,24 +4,26 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+            <%# avatar %>
+            <% if @patient_profile.user.image.attached? %>
+              <%= image_tag @patient_profile.user.image, class: "rounded-circle img-fluid", style: "width: 250px;", alt: "avatar"  %>
+            <% else %>
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3"><%= @patient_profile.user.username %></h5>
+            <% end %>
+            <h5 class="my-3"><%= @patient_profile.user.username.humanize %></h5>
             <p class="text-muted mb-1"><%= @patient_profile.user.phone_number %></p>
             <p class="text-muted mb-4"><%= @patient_profile.user.email %></p>
             <div class="d-flex justify-content-center mb-2">
-
             <% if current_user_can_edit?(@patient_profile) %>
               <%= link_to t('activerecord.attributes.user.edit_profile'), edit_user_path(@patient_profile.user), class: 'btn btn-primary' %>
               <%= link_to t('activerecord.attributes.user.delete_profile'), @patient_profile.user, 
                           data: { turbo_method: :delete, turbo_confirm: t('activerecord.attributes.user.delete_profile_confirm')},
                           class: "btn btn-danger ms-1" %>
             <% end %>
-
             </div>
           </div>
         </div>
-
         <% if current_user_can_edit?(@patient_profile) %>
         <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
@@ -34,10 +36,8 @@
           </div>
         </div>
         <% end %>
-
       </div>
       <div class="col-lg-8">
-
         <% if current_user_can_edit?(@patient_profile) %>
         <div class="card mb-4">
           <div class="card-body">
@@ -67,7 +67,6 @@
           </div>
         </div>
         <% end %>
-
         <% unless current_user_can_edit?(@patient_profile) %>
         <div class="card mb-4">
           <div class="card-body">
@@ -80,7 +79,6 @@
           </div>
         </div>
         <% end %>
-        
         </div>
       </div>
     </div>
