change ruby version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
         &copy; <%= t('activerecord.app.company') %>
         <%= l Time.now, format: :year %>
       </p>
-      <a href="https://blogasik.herokuapp.com/"><%= t('activerecord.app.url') %></a>
+      <a href="https://healthapp.herokuapp.com/"><%= t('activerecord.app.url') %></a>
     </div>
   </footer>
   </body>
