--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Forgot your password?</h2>
+<h2><%= t('activerecord.attributes.user.forgot_your_password') %></h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, data: { turbo: false }) do |f| %>
+  <%= f.error_notification %>
+  <%# <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-inputs">
+        <%= f.input :email,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+<br>
+  <div class="form-actions">
+    <%= f.button :submit, t('activerecord.attributes.user.reset_password'), class: "btn btn-large btn-danger", "data-disable-with" => "Submitting.."%>
   </div>
 <% end %>
-
+<br>
 <%= render "users/shared/links" %>
