--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,9 +1,6 @@
 <h2><%= t('activerecord.attributes.user.change_password') %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-  <%= render partial: 'partials/form_errors', locals: {model: @user} %>
-
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, data: { turbo: false }) do |f| %>
   <div class="form-group">
     <%= f.input :email, class: 'form-control', error_class: 'is-invalid', valid_class: 'is-valid' %>
 
@@ -24,4 +21,4 @@
 <p><%= t('activerecord.attributes.user.unhappy')%> </p>
 <%= button_to t('activerecord.attributes.user.cancel_account'), registration_path(resource_name), data: { confirm: t('simple_form.labels.defaults.confirm') }, method: :delete, class: "btn btn-large btn-danger", "data-disable-with" => "Submitting.." %></p>
 
-<%= link_to t('simple_form.button.back'), :back %>
+<%= link_to t('simple_form.button.back'), :back, class: "btn btn-large btn-primary" %>
