--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,13 +1,8 @@
 <h2><%= t('activerecord.attributes.user.sign_up') %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
   <%= f.error_notification %>
-
-  <%= render "users/shared/error_messages", resource: resource %>
-  
-  <% resource.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-  <% end %>
+  <%# <%= render "users/shared/error_messages", resource: resource %>
 
   <div class="form-inputs">
     <%= f.input :type,
