create errors pages

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,2 @@
-<section style="background-color: #eee;">
-  <div class="container p-5">
-  <p style="color: green"><%= notice %></p>
-
-    </div>
-</section>
+<p style="color: green"><%= notice %></p>
+<%= image_tag 'fon.jpg', class: "img-fluid", alt: "Responsive image" %>
