--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,11 +26,21 @@ body {
 
 }
 .swich {
-  color: #BBBBBB;
+  // color: #BBBBBB;
   font-size: 10px;
   line-height: 2px;
 }
 
-.container-bg {
+// .container-bg {
+//   background: #eee;
+// }
+
+body.light {
   background: #eee;
+  color: black;
+}
+
+body.dark {
+  background: black;
+  color: white;
 }
