--- a/app/views/doctor_profiles/index.html.erb
+++ b/app/views/doctor_profiles/index.html.erb
@@ -1,4 +1,4 @@
-<section class="vh-10" style="background-color: #eee;">
+<section class="vh-10" style="background-color: <%= cookies[:theme] %>;">
   <div class="container py-3">
   <h3 class="text-muted mb-1"><%= t('view.doctors') %>:</h3>
   <% @doctor_profiles.each do |doctor| %>
