--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class=<%= cookies[:theme] %>>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <div class="content">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -28,7 +28,7 @@
                 <a>
                   <%= link_to  t('view.categories.categories'), categories_path, class: 'btn btn-dark' %>
                   <span class="sr-only">
-                (current)
+                <%# (current) %>
               </span>
                 </a>
               </li>
@@ -37,7 +37,7 @@
                 <a>
                   <%= link_to t('controllers.appointments.create'), new_doctors_appointment_url, class: 'btn btn-dark' %>
                   <span class="sr-only">
-                (current)
+                <%# (current) %>
               </span>
                 </a>
               </li>
@@ -50,7 +50,7 @@
                     <%=link_to t("view.doctors"), doctor_profiles_url, class: "nav-link, btn btn-dark" %>
                   <% end %>
                   <span class="sr-only">
-                  (current)
+                  <%# (current) %>
                   </span>
                 </a>
               </li>
@@ -62,7 +62,7 @@
                     <%= link_to current_user.username.titleize, current_user.patient_profile, class: "nav-link, btn btn-dark" %>
                   <% end %>
                   <span class="sr-only">
-                  (current)
+                  <%# (current) %>
                   </span>
                 </a>
               </li>
@@ -70,7 +70,7 @@
                 <a>
                   <%= link_to t('activerecord.attributes.user.sign_out'), destroy_user_session_path, 'data-turbo-method': :delete, class: "nav-link, btn btn-dark" %>
                   <span class="sr-only">
-                (current)
+                <%# (current) %>
               </span>
                 </a>
               </li>
@@ -83,7 +83,7 @@
                 <a>
                   <%= link_to t('activerecord.attributes.user.sign_in'), new_user_session_path, class: "nav-link, btn btn-dark" %>
                   <span class="sr-only">v
-                (current)
+                <%# (current) %>
               </span>
                 </a>
               </li>
@@ -91,17 +91,25 @@
                 <a>
                   <%= link_to t('activerecord.attributes.user.sign_up'), new_user_registration_path, class: "nav-link, btn btn-dark" %>
                   <span class="sr-only">
-                (current)
+                <%# (current) %>
               </span>
                 </a>
               </li>
             </ul>
           </div>
         <% end %>
+        
         <div class="navbar-brand">
           <div class="lokale">
             <a><%= link_to emoji_flag("gb"), root_path(locale: :en), class: 'btn swich' %></a>
             <a><%= link_to emoji_flag("ua"), root_path(locale: :ua), class: 'btn swich' %></a>
+          </div>
+        </div>
+        <%# choose background color %>
+        <div class="navbar-brand">
+          <div class="lokale">
+            <a><%= link_to '☀', set_theme_path(theme: 'light'), class: 'btn swich' %></a>
+            <a><%= link_to '🌙', set_theme_path(theme: 'dark'), class: 'btn swich' %></a>
           </div>
         </div>
       </div>
