--- a/app/views/doctors_appointments/show.html.erb
+++ b/app/views/doctors_appointments/show.html.erb
@@ -1,4 +1,4 @@
-<section style="background-color: #eee;">
+<section style="background-color: <%= cookies[:theme] %>;">
     <div class="row">
       <div class="col-lg-4">
       <%# doctor %>
