--- a/app/views/doctor_profiles/show.html.erb
+++ b/app/views/doctor_profiles/show.html.erb
@@ -1,4 +1,4 @@
-<section style="background-color: #eee;">
+<section style="background-color: <%= cookies[:theme] %>;">
   <div class="container py-5">
     <div class="row">
       <div class="col">
