--- a/app/views/patient_profiles/show.html.erb
+++ b/app/views/patient_profiles/show.html.erb
@@ -1,4 +1,4 @@
-<section style="background-color: #eee;">
+<section style="background-color: <%= cookies[:theme] %>;">
   <div class="container py-5">
     <div class="row">
       <div class="col-lg-4">
@@ -29,7 +29,7 @@
           <div class="card-body p-0">
             <ul class="list-group list-group-flush rounded-3">
               <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                <p class="mb-0"><%= @patient_profile.description %></p>
+                <p class="mb-0"><%= sanitize @patient_profile.description %></p>
               </li>
               <%= link_to t('activerecord.attributes.user.edit_description'), edit_patient_profile_url(@patient_profile), class: 'btn btn-info' %>
             </ul>
