--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,2 @@
 <p style="color: green"><%= notice %></p>
-<%= image_tag 'fon.jpg', class: "img-fluid", alt: "Responsive image" %>
+<%= image_tag 'fon.jpg', class: "bi", alt: "Responsive image" %>
