--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,13 @@ body.dark {
   background: black;
   color: white;
 }
+
+.bi {
+  background: url( '/app/assets/images/fon.jpg' ) no-repeat center / cover;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
