--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
               <li class="nav-item active">
                 <a>
                   <%= link_to t('activerecord.attributes.user.sign_in'), new_user_session_path, class: "nav-link, btn btn-dark" %>
-                  <span class="sr-only">v
+                  <span class="sr-only">
                 <%# (current) %>
               </span>
                 </a>
@@ -124,6 +124,10 @@
       </div>
     </div>
   </div>
+  <%# <p id='percent' style='color: white'>0</p> %>
+  <p id='offset' style='color: white'>0</p>
+  <%# <p id='height' style='color: white'>0</p> %>
+  <%# <p id='inner' style='color: white'>0</p>  %>
 
   <footer class="footer page-footer font-small mdb-color darken-3 pt-4">
     <div class="footer-copyright text-center py-3 container">
