--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,19 +7,20 @@
       <th scope="col"><%= t('view.doctor_size') %></th>
     </tr>
   </thead>
-  <tbody>
+  <%= render 'partials/categories', categories: @categories %>
+  <%# <tbody>
     <% @categories.each do |category| %>
-      <tr>
+      <%# <tr>
       <% if I18n.locale  == :ua %>
-        <td><%= link_to category.name_ua.humanize, category, class: 'btn btn-light' %></td>
-      <% else %>
-        <td><%= link_to category.name_en.humanize, category, class: 'btn btn-light' %></td>
-      <% end %>
+        <%# <td><%= link_to category.name_ua.humanize, category, class: 'btn btn-light'</td> %>
+      <%# <% else %> 
+        <%# <td><%= link_to category.name_en.humanize, category, class: 'btn btn-light'</td>  %>
+      <%# <% end %> 
       
-      <td>
-        <%= link_to category.doctor_profiles.size, category, class: 'btn btn-light' %>
-      </td>
-      </tr>
-    <% end %>    
-  </tbody>
+      <%# <td> %>
+        <%# <%= link_to category.doctor_profiles.size, category, class: 'btn btn-light' %> 
+      <%# </td> %>
+      <%# </tr> %>
+    <%# <% end %>     
+  <%# </tbody> %>
 </table>
