--- a/app/views/search/_search_form.html.erb
+++ b/app/views/search/_search_form.html.erb
@@ -1,4 +1,14 @@
-<%= form_tag search_search_index_path, method: :post do %>
-  <%= text_field_tag :search %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-<% end %>
+<div class="row">
+    <div class="col-md-5 mx-auto">
+        <h3 class="text-muted mb-1"><%= t('view.doctors_search')%>: </h3>
+        <%= simple_form_for :search, url: search_search_index_path, method: :post do |f| %>
+        <div class="input-group">
+          <%= f.input :search, label: false, input_html: {class: "form-control border-end-0 border rounded-pill"} %>
+          <span class="input-group-append">
+          <%= f.submit "🔍", class: "btn btn-outline-secondary bg-#{cookies[:theme]} border-bottom-0 border rounded-pill ms-n5" %>
+          <i class="fa fa-search"></i>
+          </span>
+        </div>
+        <%end%>
+    </div>
+</div>
