--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,13 +1,12 @@
 <section class="vh-10" style="background-color: <%= cookies[:theme] %>;">
-<h3 class="text-muted mb-1"><%= t('view.doctors_search') %>:</h3>
-<div class="search">
-  <%= render 'search/search_form' %>
-</div>
-  <div class="container py-3">
-
-    <%# return search result %>
-    <div id="results">
-      <%= render 'partials/search', results: @results %>
+<div class="container shadow min-vh-100 py-4">
+      <div class="search">
+        <%= render 'search/search_form' %>
+      </div>
+    <div class="container py-3">
+        <div id="results">
+          <%= render 'partials/search', results: @results %>
+        </div>
     </div>
-  </div>
+</div>
 </section>
