--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,26 +1,9 @@
 <p style="color: green"><%= notice %></p>
-
-<table class="table table-light">
-  <thead>
-    <tr>
-      <th scope="col"><%= t('view.categories.categories') %></th>
-      <th scope="col"><%= t('view.doctor_size') %></th>
-    </tr>
-  </thead>
-  <%= render 'partials/categories', categories: @categories %>
-  <%# <tbody>
-    <% @categories.each do |category| %>
-      <%# <tr>
-      <% if I18n.locale  == :ua %>
-        <%# <td><%= link_to category.name_ua.humanize, category, class: 'btn btn-light'</td> %>
-      <%# <% else %> 
-        <%# <td><%= link_to category.name_en.humanize, category, class: 'btn btn-light'</td>  %>
-      <%# <% end %> 
-      
-      <%# <td> %>
-        <%# <%= link_to category.doctor_profiles.size, category, class: 'btn btn-light' %> 
-      <%# </td> %>
-      <%# </tr> %>
-    <%# <% end %>     
-  <%# </tbody> %>
-</table>
+<div class="container shadow min-vh-100 py-4">
+    <div class="search">
+      <%= render 'partials/search_categories_form' %>
+    </div>
+    <div id="results">
+      <%= render 'partials/categories', categories: @categories %>
+    </div>
+</div>
