--- a/app/views/partials/_search_categories_form.html.erb
+++ b/app/views/partials/_search_categories_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-5 mx-auto">
-        <h3 class="text-muted mb-1"><%= t('view.doctors_search')%>: </h3>
-        <%= simple_form_for :search, url: search_search_index_path, method: :post do |f| %>
+        <h3 class="text-muted mb-1"><%= t("view.#{params[:controller]}_search")%>: </h3>
+        <%= simple_form_for :search, url: search_categories_search_index_path, method: :post do |f| %>
         <div class="input-group">
           <%= f.input :search, label: false, input_html: {class: "form-control border-end-0 border rounded-pill"} %>
           <span class="input-group-append">
@@ -9,6 +9,6 @@
           <i class="fa fa-search"></i>
           </span>
         </div>
-        <%end%>
+        <% end %>
     </div>
 </div>
