--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,7 @@
 <section class="vh-10" style="background-color: <%= cookies[:theme] %>;">
 <div class="container shadow min-vh-100 py-4">
       <div class="search">
-        <%= render 'search/search_form' %>
+        <%= render 'partials/search_form' %>
       </div>
     <div class="container py-3">
         <div id="results">
